# filez

./: .gitignore  Cargo.toml  README.md
examples/: text_scroll.rs  text_wrap.rs
src/: lib.rs  theme.rs  util.rs  widgets.rs
src/fs/: local.rs  mod.rs
src/ui/: app.rs  explorer.rs  info.rs  mod.rs  popup.rs  status.rs
