[package]
name = "filez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17.0"
crossterm = "0.23.0"
number_prefix = "0.4.0"

env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
libc = "0.2.119"
lazy_static = "1.4.0"
clap = { features=["cargo"], version="3.1.6" }
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
